--- a/app/src/main/res/layout/activity_login_page_student.xml
+++ b/app/src/main/res/layout/activity_login_page_student.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginPageStudent">
+    tools:context=".LoginPageStudent"
+    android:background="@drawable/f3"
+    >
     <ImageView
         android:id="@+id/upeslogo"
         android:layout_width="wrap_content"
