--- a/app/src/main/res/layout/event_list_rec_view_layout.xml
+++ b/app/src/main/res/layout/event_list_rec_view_layout.xml
@@ -11,7 +11,7 @@
     cardview:cardCornerRadius="4dp">
 
 
-    <LinearLayout
+    <RelativeLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -32,6 +32,6 @@
             android:layout_height="match_parent"
             android:text="Event Title"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
