--- a/app/src/main/res/layout/event_lister.xml
+++ b/app/src/main/res/layout/event_lister.xml
@@ -4,11 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".Event_lister_Activity">
+    tools:context=".Events_list_student.Event_lister_Activity">
 
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:elevation="6dp"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/event_pager"
+        android:layout_below="@+id/tab_layout"
+        android:layout_alignParentBottom="true"
+
+        >
+    </android.support.v4.view.ViewPager>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
-        android:id="@+id/events_list" />
+        android:id="@+id/events_list"
+        android:layout_below="@id/event_pager"/>
 </RelativeLayout>
