--- a/app/src/main/res/layout/login_type.xml
+++ b/app/src/main/res/layout/login_type.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/colorAccent"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,19 +25,23 @@
         android:layout_height="wrap_content">
         <RadioGroup
             android:layout_width="wrap_content"
+            android:outlineAmbientShadowColor="@color/colorPrimary"
             android:layout_height="wrap_content">
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:id="@+id/student"
-                android:text="Student Login"/>
+                android:buttonTint="@color/colorPrimary"
+                android:text="Student Login"
+                android:textColorLink="@color/active_state_submit_button" />
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/chapter"
                 android:layout_margin="5dp"
-                android:text="Chapter Login"/>
+                android:text="Chapter Login"
+                android:buttonTint="@color/colorPrimary"/>
         </RadioGroup>
     </LinearLayout>
     <Button
