Student chapter database created and login is validated

--- a/app/src/main/res/layout/activity_login_page_chapter.xml
+++ b/app/src/main/res/layout/activity_login_page_chapter.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginPageChapter"
+    tools:context=".Chapter.LoginPageChapter"
     android:background="@drawable/f3">
     <ImageView
         android:id="@+id/upeslogo"
@@ -66,7 +66,6 @@
         android:layout_marginBottom="70dp"
         android:alpha=".5"
         android:background="@android:color/holo_blue_dark"
-        android:onClick="Mylogin"
         android:text="Log In"
         android:textAppearance="@style/TextAppearance.AppCompat.Button"
         app:layout_constraintBottom_toTopOf="@+id/logintext"
