--- a/app/src/main/res/layout/activity_login_page_student.xml
+++ b/app/src/main/res/layout/activity_login_page_student.xml
@@ -73,7 +73,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordText" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordText"
+        android:onClick="Mylogin"/>
 
     <TextView
         android:id="@+id/logintext"
